[package]
name = "warp-pprof"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0" }
futures = { version = "0.3", features = ["thread-pool", "compat"] }
pprof = { version = "0.4.4", features = ["protobuf", "flamegraph"] }
serde = { version = "1.0.126", features = ["derive"] }
tokio = { version = "1.8.0", features = ["full"] }
warp = { version = "0.3" }
